# ANUBIS

./: .gitignore  README.md  pyproject.toml  setup.py
anubis/: _likelihood.py  exceptions.py  load.py  mixture.py  plot.py  utils.py
anubis/_pipelines/: hierarchical_inference.py  probability_density.py
heteromix/: mixture.py
muffin/: mixture.py
