[build-system]
requires = [
    "oldest-supported-numpy",
    "setuptools>=42",
    "wheel",
    "build",
    ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['anubis', 'anubis._pipelines']

[project]
name = 'anubis'
description = 'ANUBIS'
version = '0.5.0'
requires-python = '< 3.12'
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ['DPGMM', 'figaro', 'hierarchical', 'inference', 'HDPGMM', 'augmented']
authors = [
  {name = "Stefano Rinaldi", email = "stefano.rinaldi@uni-heidelberg.de"},
  ]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  'Topic :: Scientific/Engineering :: Astronomy',
  'Topic :: Scientific/Engineering :: Physics',
]

dependencies = [
    "numpy > 1.22",
    "scipy",
    "numba",
    "matplotlib != 3.6.3",
    "dill",
    "corner",
    "figaro >= 1.4"
    ]

[project.urls]
Repository = "https://github.com/sterinaldi/ANUBIS.git"
Issues = "https://github.com/sterinaldi/ANUBIS/issues"

[project.scripts]
anubis-density      = "anubis._pipelines.probability_density:main"
anubis-hierarchical = "anubis._pipelines.hierarchical_inference:main"
